HTML structure for twitter clone

--- a/exercise/style/style.css
+++ b/exercise/style/style.css
@@ -7,14 +7,46 @@ body {
   display: flex;
   min-height: 100vh;
   width: 100%;
-  background-color: blue;
+  background-color: #0f0f11;
 }
 
-.navigation {
+.navigation-container {
   width: 20%;
   max-width: 100px;
   min-width: 70px;
-  background-color: aqua;
+}
+
+.navigation {
+  color: white;
+  margin-top: 30px;
+}
+
+.logo {
+  display: flex;
+  justify-content: center;
+}
+
+.logo i {
+  font-size: 30px;
+}
+
+.home-link {
+  display: flex;
+  justify-content: center;
+  margin-top: 20px;
+}
+
+.profile-container {
+  display: flex;
+  justify-content: center;
+  margin-top: 20px;
+}
+
+.profile {
+  width: 30px;
+  height: 30px;
+  background-color: white;
+  border-radius: 50%;
 }
 
 .main {
